[workspace]
resolver = "2"
members = [
  "shared",
  "sky-shader",
  "wgpu-runner",
  "builder",
]


[workspace.package]
version = "0.0.0"
authors = ["JCrist <jan.cristina@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
spirv-std = "0.5"
spirv-std-types = "0.5"
spirv-std-macros = "0.5"
spirv-builder = "0.5"
rustc_codegen_spirv = "0.5"
rustc_codegen_spirv-types = "0.5"

# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256

